
2008-01-12  Peter Landgren <peter.talken@telia.com>
    * src/ViewManager.py: partial fix for #1580. Work in DisplayState.py remains.

2008-01-12  Stéphane Charette <stephanecharette@gmail.com>
	* src/Config/_GrampsConfigKeys.py:
	* src/ReportBase/_PaperMenu.py:
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_DocReportDialog.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	remember if the paper options should be metric, and remember the
	custom paper sizes (issues #1481)
	* src/plugins/GVFamilyLines.py: small code cleanup
	* src/plugins/GVRelGraph.py: implement post_init()

2008-01-11  Stéphane Charette <stephanecharette@gmail.com>
	* src/ReportBase/_BareReportDialog.py: allow scroll arrows on the
	notebook if there are too many tabs to display
	* src/plugins/GVFamilyLines.py: context-sensitive control feedback
	based on other selected controls
	* src/PluginUtils/_MenuOptions.py: define inheritable method that gets
	called after all of the controls have been created

2008-01-11  Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: add alt key combo's for buttons

2008-01-10 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/db/dbdir.py: add doc, remove unused variable
    * src/GrampsDbUtils/_GrampsBSDDB.py: : add doc, remove unused variable
    * src/plugins/AncestorChart.py: cleanup unused vars
    * src/plugins/Calendar.py: typo in doc
    * src/plugins/ChangeNames.py: cleanup unused vars
    * src/plugins/DescendChart.py: cleanup unused vars
    * src/plugins/FamilyLines.py: cleanup unused vars
    * src/ReportBase/_ReportUtils.py: fix typo in variable Name

2008-01-10 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/MarkupText.py: in _hex_to_color removed dupe assignment to color
    * src/PageView.py: doc typo and delete unused statements in filter_toggle
    * src/ViewManager.py: fix typo in doc